--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "esm": "^3.2.25",
     "make": "^0.8.1",
     "node-netcat": "^1.4.8",
